commit in submodule

--- a/hello-cloudbuild/Dockerfile
+++ b/hello-cloudbuild/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.14-alpine AS build
 
 RUN apk add --update --no-cache gcc git build-base
-
+# this is our workdir 
 WORKDIR /src/
 COPY main*.go go.* /src/
 RUN CGO_ENABLED=0 go build -o /bin/demo
